# server/src/api/v1/activity/dto/activity-response.dto.ts
@@ -1,6 +1,14 @@
 import { ApiProperty } from '@nestjs/swagger';
 import { ActivityEntityType, ActivityType } from '../activity.constants';
 
+export class ActivityActorResponseDto {
+  @ApiProperty({ type: String })
+  id: string;
+
+  @ApiProperty({ type: String })
+  name: string;
+}
+
 export class ActivityResponseDto {
   @ApiProperty({ type: String })
   id: string;
@@ -10,6 +18,9 @@ export class ActivityResponseDto {
 
   @ApiProperty({ type: String })
   actorId: string;
+
+  @ApiProperty({ type: ActivityActorResponseDto })
+  actor: ActivityActorResponseDto;
 
   @ApiProperty({ type: 'string', enum: ActivityType, enumName: 'ActivityType' })
   type: ActivityType;
